added color to h1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
      <body>
 
-         <h1 style="text-align: center">ICICI Bank</h1>
+         <h1 style="text-align: center; color:red">ICICI Bank</h1>
 
      </body>
 </html>
